--- a/src/coms/system-res/views/sysres-content.html
+++ b/src/coms/system-res/views/sysres-content.html
@@ -1,4 +1,4 @@
-<div class="res-rli">
+<div class="res-rli container">
 	<div class="res-rleft">
 		<p>课标导航</p>
 	</div>
@@ -49,16 +49,16 @@
 						<a>收藏次数</a>
 						<img src="assets/img/s-g.png" />
 						<a>浏览次数</a>
-						<img class="t1" src="assets/img/tab1.png" />
-						<img class="t2" src="assets/img/tab2.png" />
+						<img class="meg-tab1" src="assets/img/tab1.png" />
+						<img class="meg-tab2" src="assets/img/tab2.png" />
 					</div>
 				</div>
 				<div class="res-r-main">
 					<ul class="res-ul">
 						<li class="current-style">
 							<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
+									<input class="in-checkbox" type="checkbox">
+									<img class="check-img" src="assets/img/d.png"></span>
 							<span class="span2">
 									<img src="assets/img/title.jpg"></span>
 							<span class="span3">
@@ -83,8 +83,8 @@
 						</li>
 						<li class="current-style">
 							<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
+									<input class="in-checkbox" type="checkbox">
+									<img class="check-img" src="assets/img/d.png"></span>
 							<span class="span2">
 									<img src="assets/img/title.jpg"></span>
 							<span class="span3">
@@ -109,8 +109,8 @@
 						</li>
 						<li class="current-style">
 							<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
+									<input class="in-checkbox" type="checkbox">
+									<img class="check-img" src="assets/img/d.png"></span>
 							<span class="span2">
 									<img src="assets/img/title.jpg"></span>
 							<span class="span3">
@@ -135,8 +135,8 @@
 						</li>
 						<li class="current-style">
 							<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
+									<input class="in-checkbox" type="checkbox">
+									<img class="check-img" src="assets/img/d.png"></span>
 							<span class="span2">
 									<img src="assets/img/title.jpg"></span>
 							<span class="span3">
@@ -161,8 +161,8 @@
 						</li>
 						<li class="current-style">
 							<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
+									<input class="in-checkbox" type="checkbox">
+									<img class="check-img" src="assets/img/d.png"></span>
 							<span class="span2">
 									<img src="assets/img/title.jpg"></span>
 							<span class="span3">
@@ -205,7 +205,7 @@
 						<div class="s-left">
 							<p>多媒体教辅</p>
 							<p>大小：<a>4.1M</a></p>
-							<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
+							<p><a class="s-left-num">210</a>浏览/<a class="q-c">5</a>下载/<a class="s-left-num">20</a>收藏</p>
 						</div>
 						<div class="i-right">
 							<p class="i-right-1">
@@ -216,7 +216,7 @@
 								<img src="assets/img/s-y.png" />
 							</p>
 							<p class="i-right-2">
-								<img class="res1" src="assets/img/res-1.png" />
+								<img class="res1" src="assets/img/t1.png" />
 								<img class="res2" src="assets/img/c2.png" />
 							</p>
 						</div>
@@ -238,7 +238,7 @@
 								<img src="assets/img/s-y.png" />
 							</p>
 							<p class="i-right-2">
-								<img class="res1" src="assets/img/res-1.png" />
+								<img class="res1" src="assets/img/t1.png" />
 								<img class="res2" src="assets/img/c2.png" />
 							</p>
 						</div>
@@ -258,7 +258,7 @@
 
 							</p>
 							<p class="i-right-2">
-								<img class="res1" src="assets/img/res-1.png" />
+								<img class="res1" src="assets/img/t1.png" />
 								<img class="res2" src="assets/img/c2.png" />
 							</p>
 						</div>
@@ -280,7 +280,7 @@
 								<img src="assets/img/s-y.png" />
 							</p>
 							<p class="i-right-2">
-								<img class="res1" src="assets/img/res-1.png" />
+								<img class="res1" src="assets/img/t1.png" />
 								<img class="res2" src="assets/img/c2.png" />
 							</p>
 						</div>
@@ -302,7 +302,7 @@
 								<img src="assets/img/s-y.png" />
 							</p>
 							<p class="i-right-2">
-								<img class="res1" src="assets/img/res-1.png" />
+								<img class="res1" src="assets/img/t1.png" />
 								<img class="res2" src="assets/img/c2.png" />
 							</p>
 						</div>
@@ -324,7 +324,7 @@
 								<img src="assets/img/s-y.png" />
 							</p>
 							<p class="i-right-2">
-								<img class="res1" src="assets/img/res-1.png" />
+								<img class="res1" src="assets/img/t1.png" />
 								<img class="res2" src="assets/img/c2.png" />
 							</p>
 						</div>
@@ -346,7 +346,7 @@
 								<img src="assets/img/s-y.png" />
 							</p>
 							<p class="i-right-2">
-								<img class="res1" src="assets/img/res-1.png" />
+								<img class="res1" src="assets/img/t1.png" />
 								<img class="res2" src="assets/img/c2.png" />
 							</p>
 						</div>
