--- a/src/coms/system-res/views/sysres-header.html
+++ b/src/coms/system-res/views/sysres-header.html
@@ -1,7 +1,7 @@
 <!--系统资源页头部-->
-<div class="res-header">
+<div class="res-header  container">
 		<!-- 选择 导航 展示-->
-		<div class="res-rtitle">
+		<div class="res-rtitle  container">
 			<label>您已选择:</label>
 			<select class="res-select-grade">
 				<option>小学</option>
@@ -26,18 +26,18 @@
 		</div>	
 		
 		<!--显示隐藏-->
-		<div class="res-rbody">
-			<div class="line1">
-				<span class="span-1">学段:</span>
-				<span class="span-2">
+		<div class="res-rbody  container">
+			<div class="res-school">
+				<span class="res-school-phase">学段:</span>
+				<span class="res-school-phase-sort">
 		   	   	   	<a>小学</a>
 		   	   	   	<a>初中</a>
 		   	   	   	<a>高中</a>
-		   	   	   </span>
+		   	   	</span>
 			</div>
-			<div class="line2">
-				<span class="span-1">学科:</span>
-				<span class="span-21">
+			<div class="res-school">
+				<span class="res-school-phase">学科:</span>
+				<span class="res-school-phase-sort1">
 		   	   	   	<a>语文</a>
 		   	   	   	<a>数学</a>
 		   	   	   	<a>英语</a>
@@ -51,11 +51,11 @@
 		   	   	   	<a>h</a>
 		   	   	   
 		   	   	   </span>
-				<span class="span-3">
+				<span class="res-school-phase-more">
 		   	   	   	<a>更多</a>
 		   	   	   	<img src="assets/img/b-a.png"/>
 		   	   	   </span>
-				<div class="span-22">
+				<div class="res-school-phase-sort2">
 					<a>i</a>
 					<a>j</a>
 					<a>k</a>
@@ -69,9 +69,9 @@
 					<a>s</a>
 				</div>
 			</div>
-			<div class="line3">
-				<span class="span-1">版本:</span>
-				<span class="span-2">
+			<div class="res-school">
+				<span class="res-school-phase">版本:</span>
+				<span class="res-school-phase-sort3">
 		   	   	   	<a>北师大版本</a>
 		   	   	   	<a>人教版</a>
 		   	   	   	<a>鲁教版</a>
