--- a/src/coms/system-res/views/sysres-content.html
+++ b/src/coms/system-res/views/sysres-content.html
@@ -1,7 +1,4 @@
-<div class="res-rli container">
-	<div class="res-rleft">
-		<p>课标导航</p>
-	</div>
+<div class="res-rli">
 	<div class="res-rright">
 		<div class="res-rright-title">
 			<div class="current-res">全部</div>
