--- a/src/coms/system-res/views/systemres.html
+++ b/src/coms/system-res/views/systemres.html
@@ -12,5 +12,5 @@
 		
 	</div>
 	<!--右侧资源列表-->
-	<div class="col-md-9" data-ng-include="'/coms/system-res/views/sysres-content.html'"></div>
+	<div class="col-md-8 res-content" data-ng-include="'/coms/system-res/views/sysres-content.html'"></div>
 </div>
