--- a/src/less/systemres.less
+++ b/src/less/systemres.less
@@ -1,3 +1,6 @@
+.res-content{
+    float: left;
+}
 /*顶部*/
 .res-header {
   margin-top: 40px;
@@ -133,33 +136,16 @@
   margin-top: 30px;
 }
 .res-rli {
-  width: 1200px;
   height: 1130px;
   border: 1px solid #bebebe;
   margin: 0 auto;
   margin-top: 50px;
-}
-/*左侧*/
-.res-rleft {
-  width: 258px;
-  height: 1130px;
-  background: #dedede;
-  float: left;
-}
-.res-rleft p {
-  color: #fff;
-  background: #0094ce;
-  height: 62px;
-  line-height: 62px;
-  text-align: center;
-  font-size: 22px;
 }
 /*右侧*/
 .res-rright {
   float: left;
   background: #fff;
   height: 1130px;
-  width: 910px;
 }
 .res-rright .res-rright-title {
   color: #666666;
