--- a/src/less/catalog.less
+++ b/src/less/catalog.less
@@ -2,6 +2,7 @@
 .catalog{
     margin-top: 20px;
     width: 260px;
+    float:left;
 }
 .catalog .catalog-header{
     height: 30px;
@@ -18,7 +19,7 @@
     margin-left: -33px;
 }
 .catalog-tree{
-    padding: 0 0 30px 30px;
+    padding: 0 10px 30px 30px;
     overflow:auto;
-    max-height: 800px;
+    max-height: 1200px;
 }
