--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -1,29 +1,30 @@
 ﻿<div id="header">
 	<div class="header-top container">
-		<img class="logo" src="assets/images/logo.jpg"/>
+		<img class="logo" src="assets/images/logo.png" />
 		<ul class="message">
 			<li><a href="#">消息</a></li>
 			<li><a href="#">帮助中心</a></li>
 			<li><a href="#">退出</a></li>
 		</ul>
 	</div>
-	<div class="container banner"><img  src="assets/images/banner.png"/></div>
-	
+	<div class="container banner"><img src="assets/images/banner.png" /></div>
+
 	<div class="banner-footer">
 		<div class="banner-footer-header"></div>
 		<div class="banner-footer-footer"></div>
 	</div>
-	<div class="nav">
+	<div class="main-nav nav-pills">
 		<div class="container">
-			<ul class="main-nav">
-				<li class="on">系统资源</li>
-				<li>校本资源</li>
-				<li>区本资源</li>
-				<li>学生学习空间</li>
-				<li>资源定制</li>
+
+			<ul class="nav">
+				<li><a href="#">系统资源</a></li>
+				<li><a href="#">校本资源</a></li>
+				<li><a href="#">区本资源</a></li>
+				<li><a href="#">学生学习空间</a></li>
+				<li><a href="#">资源定制</a></li>
+				<li><a href="#"><img src="assets/images/profile.png"/>个人中心</a></li>
+				<li><a href="#"><img src="assets/images/shopcart.png"/>备课夹</a></li>
 			</ul>
-			<div class="nav-tools"><img src="assets/img/gou.jpg"/>备课夹</div>
-			<div class="nav-tools"><img src="assets/img/person.jpg"/>个人中心</div>
 		</div>
 	</div>
 </div>
