--- a/src/coms/system-res/views/sysres-header.html
+++ b/src/coms/system-res/views/sysres-header.html
@@ -1,43 +1,42 @@
 <!--系统资源页头部-->
-<div class="res-header  container">
-		<!-- 选择 导航 展示-->
-		<div class="res-rtitle  container">
-			<label>您已选择:</label>
-			<select class="res-select-grade">
-				<option>小学</option>
-				<option>初中</option>
-				<option selected>高中</option>
-			</select>
-			<img src="assets/img/next.png" />
-			<select class="res-select-subject">
-				<option>语文</option>
-				<option>数学</option>
-				<option selected>英语</option>
-			</select>
-			<img src="assets/img/next.png" />
-			<a class="select-tips">全部</a><img class="version-wr" src="assets/img/wr.png" />
-			<div class="c-pos">
-                <label class="right-label">收起筛选</label>
-			   	<input class="res-search" type="search" placeholder="在当前条件下搜索"/>		   
-			   	<span class="res-search-btn">
-			   		<img src="assets/img/glass.png"/>		   
-				</span>
-			</div>
-		</div>	
-		
-		<!--显示隐藏-->
-		<div class="res-rbody  container">
-			<div class="res-school">
-				<span class="res-school-phase">学段:</span>
-				<span class="res-school-phase-sort">
-		   	   	   	<a>小学</a>
-		   	   	   	<a>初中</a>
-		   	   	   	<a>高中</a>
-		   	   	</span>
-			</div>
-			<div class="res-school">
-				<span class="res-school-phase">学科:</span>
-				<span class="res-school-phase-sort1">
+<div class="res-header container">
+	<!-- 选择 导航 展示-->
+	<label>您已选择：</label>
+	<select class="res-select-grade">
+		<option>小学</option>
+		<option>初中</option>
+		<option selected>高中</option>
+	</select>
+	<i class="icon-angle-right"></i>
+	<select class="res-select-subject">
+		<option>语文</option>
+		<option>数学</option>
+		<option selected>英语</option>
+	</select>
+	<i class="icon-angle-right"></i>
+	<a class="select-tips">全部</a>
+	<div class="res-filter">
+		<label class="right-label">收起筛选</label>
+		<input class="res-search" type="search" placeholder="在当前条件下搜索" />
+		<span class="res-search-btn">
+			<i class="icon-search"></i>	   
+		</span>
+	</div>
+</div>
+
+<!--筛选主内容 -->
+<div class="res-rbody container">
+	<div class="res-school">
+		<span class="res-school-phase">学段:</span>
+		<span class="res-school-phase-sort">
+		   	<a>小学</a>
+		   	<a>初中</a>
+		   	<a>高中</a>
+		</span>
+	</div>
+	<div class="res-school">
+		<span class="res-school-phase">学科:</span>
+		<span class="res-school-phase-sort1">
 		   	   	   	<a>语文</a>
 		   	   	   	<a>数学</a>
 		   	   	   	<a>英语</a>
@@ -51,27 +50,27 @@
 		   	   	   	<a>h</a>
 		   	   	   
 		   	   	   </span>
-				<span class="res-school-phase-more">
+		<span class="res-school-phase-more">
 		   	   	   	<a>更多</a>
 		   	   	   	<img src="assets/img/b-a.png"/>
 		   	   	   </span>
-				<div class="res-school-phase-sort2">
-					<a>i</a>
-					<a>j</a>
-					<a>k</a>
-					<a>l</a>
-					<a>m</a>
-					<a>n</a>
-					<a>o</a>
-					<a>p</a>
-					<a>q</a>
-					<a>r</a>
-					<a>s</a>
-				</div>
-			</div>
-			<div class="res-school">
-				<span class="res-school-phase">版本:</span>
-				<span class="res-school-phase-sort3">
+		<div class="res-school-phase-sort2">
+			<a>i</a>
+			<a>j</a>
+			<a>k</a>
+			<a>l</a>
+			<a>m</a>
+			<a>n</a>
+			<a>o</a>
+			<a>p</a>
+			<a>q</a>
+			<a>r</a>
+			<a>s</a>
+		</div>
+	</div>
+	<div class="res-school">
+		<span class="res-school-phase">版本:</span>
+		<span class="res-school-phase-sort3">
 		   	   	   	<a>北师大版本</a>
 		   	   	   	<a>人教版</a>
 		   	   	   	<a>鲁教版</a>
@@ -79,6 +78,6 @@
 		   	   	   	<a>粤教版</a>
 		   	   	   	<a>华东师大版本</a>
 		   	   	   </span>
-			</div>
-		</div>
 	</div>
+</div>
+</div>
