--- a/src/less/font.less
+++ b/src/less/font.less
@@ -9,12 +9,14 @@
 /*基本字体大小 以10px为基础*/
 @fontsize: 62.5%;
 
-html{
+body{
  	font-family: @font;
  	font-size:  62.5%;
 }
 
 /*通用字体大小设置*/
+// 消息提示字体
+@msgFontSize: 1.3rem;
 // 导航字体
 @navFontSize: 2.4rem;
 
