--- a/src/less/systemres.less
+++ b/src/less/systemres.less
@@ -1,36 +1,39 @@
-.res-content{
-    float: left;
-}
 /*顶部*/
 .res-header {
-  margin-top: 40px;
 }
-.res-rtitle {
+.res-header {
   height: 55px;
   background: @resNavHeaderBGColor;
   line-height: 55px;
   font-size: @resNavFontSize;
   color: #fff;
 }
-.res-rtitle label {
-  padding-left: 40px;
+.res-header label {
+  padding-left: 30px;
 }
-.res-rtitle img {
+.res-header img {
   position: relative;
   top: 3px;
 }
-.res-rtitle select {
-  color: #717171;
+.res-header select {
+  color: @color11;
   width: 66px;
   height: 27px;
-  font-size: 20px;
+  font-size: 15px;
 }
-.c-pos {
+.res-header .icon-angle-right{
+    color: #fff;
+    font-size: 32px;
+    padding:5px;
+    
+}
+.res-filter {
   float: right;
 }
-.res-rtitle .right-label {
-  border-bottom: 1px solid #858585;
+.res-header .right-label {
+  border-bottom: 1px solid #fff;
   padding: 0;
+  margin-right:30px;
   cursor: pointer;
   display: inline-block;
   height: 40px;
@@ -40,6 +43,8 @@
   width: 343px;
   line-height: 30px;
   border: none;
+  color:#333;
+  padding-left: 5px;
 }
 .res-search-btn {
   width: 32px;
@@ -47,12 +52,14 @@
   background: #0094ce;
   display: inline-block;
   position: relative;
-  top: 13px;
+  top: 10px;
 }
-.res-search-btn img {
-  position: relative;
-  top: -12px;
-  left: 10px;
+.res-header .icon-search{
+    position: absolute;
+    color: #fff;
+    font-size: 16px;
+    top: 8px;
+    left: 8px;
 }
 .res-rtitle .version-wr {
   width: 19px;
